--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -23,12 +23,13 @@ jobs:
 
       - name: Install operator-sdk
         run: |
-          OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.27.0 \
           echo "Installing operator-sdk ${OPERATOR_SDK_DL_URL}" && \
           curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH} && \
           chmod +x operator-sdk_${OS}_${ARCH} && \
           sudo mkdir -p /usr/local/bin/ && \
           sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
+        env:
+          OPERATOR_SDK_DL_URL: https://github.com/operator-framework/operator-sdk/releases/download/v1.27.0
 
       - name: Log in to registry
         run: |
