--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           echo "Installing operator-sdk ${OPERATOR_SDK_DL_URL}" && \
           curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH} && \
-          echo ls && \
+          echo ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH} && \
+          ls -l && \
           chmod +x operator-sdk_${OS}_${ARCH} && \
           sudo mkdir -p /usr/local/bin/ && \
           sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk && \
