--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -21,18 +21,9 @@ jobs:
         env:
           OWNER: '${{ github.repository_owner }}'
 
-      - name: Install operator-sdk
-        run: |
-          echo "Installing operator-sdk ${OPERATOR_SDK_DL_URL}" && \
-          curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH} && \
-          echo ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH} && \
-          ls -l && \
-          chmod +x operator-sdk_${OS}_${ARCH} && \
-          sudo mkdir -p /usr/local/bin/ && \
-          sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk && \
-          operator-sdk version
-        env:
-          OPERATOR_SDK_DL_URL: https://github.com/operator-framework/operator-sdk/releases/download/v1.27.0
+      - uses: shivanshs9/setup-k8s-operator-sdk@v1
+        with:
+          version: "1.26.0" # The operator-sdk version to download (if necessary) and use.
 
       - name: Log in to registry
         run: |
