--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -14,6 +14,8 @@ jobs:
     name: Push devel image
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
 
       - name: git describe --tag
