--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -52,10 +52,11 @@ jobs:
 
       - name: Build and Push awx-operator Image
         run: |
-          IMAGE_TAG_BASE=ghcr.io/${OWNER_LC}/awx-operator \
           make docker-build docker-push && \
-          docker tag ${IMAGE_TAG_BASE}/awx-operator:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${OWNER_LC} && \
-          docker push ${IMAGE_TAG_BASE}/awx-operator:${OWNER_LC}
+          docker tag ${IMAGE_TAG_BASE}/awx-operator:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/} && \
+          docker push ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/}
+        env:
+          IMAGE_TAG_BASE: ghcr.io/${OWNER_LC}/awx-operator
 
       - name: Build bundle manifests
         run: |
@@ -65,7 +66,7 @@ jobs:
       - name: Build and Push awx-operator Bundle
         run: |
           IMAGE_TAG_BASE=ghcr.io/${OWNER_LC}/awx-operator \
-          make bundle-build bundle-push
-          docker tag ${IMAGE_TAG_BASE}/awx-operator-bundle:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${OWNER_LC} && \
-          docker push ${IMAGE_TAG_BASE}/awx-operator-bundle:${OWNER_LC}
+          make bundle-build bundle-push && \
+          docker tag ${IMAGE_TAG_BASE}/awx-operator-bundle:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/} && \
+          docker push ${IMAGE_TAG_BASE}/awx-operator-bundle:${GITHUB_REF##*/}
 
