--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -57,8 +57,8 @@ jobs:
       - name: Build and Push awx-operator Image
         run: |
           make docker-build docker-push && \
-          docker tag ${IMAGE_TAG_BASE}/awx-operator:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/} && \
-          docker push ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/}
+          docker tag ${IMAGE_TAG_BASE}:${VERSION} ${IMAGE_TAG_BASE}:${GITHUB_REF##*/} && \
+          docker push ${IMAGE_TAG_BASE:${GITHUB_REF##*/}
 
       - name: Build bundle manifests
         run: |
@@ -67,6 +67,6 @@ jobs:
       - name: Build and Push awx-operator Bundle
         run: |
           make bundle-build bundle-push && \
-          docker tag ${IMAGE_TAG_BASE}/awx-operator-bundle:${VERSION} ${IMAGE_TAG_BASE}/awx-operator:${GITHUB_REF##*/} && \
-          docker push ${IMAGE_TAG_BASE}/awx-operator-bundle:${GITHUB_REF##*/}
+          docker tag ${IMAGE_TAG_BASE}-bundle:${VERSION} ${IMAGE_TAG_BASE}:${GITHUB_REF##*/} && \
+          docker push ${IMAGE_TAG_BASE}-bundle:${GITHUB_REF##*/}
 
