--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -70,3 +70,8 @@ jobs:
           docker tag ${IMAGE_TAG_BASE}-bundle:${VERSION} ${IMAGE_TAG_BASE}:${GITHUB_REF##*/} && \
           docker push ${IMAGE_TAG_BASE}-bundle:${GITHUB_REF##*/}
 
+      - name: Build and Push awx-operator Catalog
+        run: |
+          make catalog-build catalog-push && \
+          docker tag ${IMAGE_TAG_BASE}-catalog:${VERSION} ${IMAGE_TAG_BASE}:${GITHUB_REF##*/} && \
+          docker push ${IMAGE_TAG_BASE}-catalog:${GITHUB_REF##*/}
